language/move-lang/tests/move_check/parser/friend_decl_qualified_struct.exp
error: 

   ┌── tests/move_check/parser/friend_decl_qualified_struct.move:7:21 ───
   │
 7 │     friend 0x42::A::A;
   │                     ^ Unexpected module member access. Expected a module identifier only
   │

